# uoc-tfg-auq

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  test_supabase_connection.py
.devcontainer/: devcontainer.json
auq-database/: README.md  migrate_all.sql  schema.sql
auq-front/: commits.md
auq_data_engine/: README.md  main.py  pyproject.toml
auq_data_engine/barcelona/: api_client.py  load_districts.py  load_indicators.py  load_neighbourhoods.py  load_point_features.py
auq_data_engine/data/: api-file-manifest.json  files_manifest.json
auq_data_engine/data/processed/: data.ipynb  insert_ready_districts_bcn.json  insert_ready_districts_madrid.json  insert_ready_indicators_bcn.json  insert_ready_indicators_madrid.json  insert_ready_neighbourhoods_bcn.json  insert_ready_neighbourhoods_madrid.json  insert_ready_point_features_bcn.json  insert_ready_point_features_madrid.json  manual-testing.ipynb
auq_data_engine/data/raw_sample/barcelona_sample/: example-record.json  test-api.ipynb
auq_data_engine/data/raw_sample/barcelona_sample/indicators/average_gross_taxable_income/: 2019_atles_renda_bruta_persona.csv  2020_atles_renda_bruta_persona.csv  2021_atles_renda_bruta_persona.csv  2022_atles_renda_bruta_persona.csv
auq_data_engine/data/raw_sample/barcelona_sample/indicators/income_disposable/: 2019_renda_disponible_llars_per_persona.csv  2020_renda_disponible_llars_per_persona.csv  2021_renda_disponible_llars_per_persona.csv
auq_data_engine/data/raw_sample/barcelona_sample/indicators/population/: 2019_pad_mdbas.csv  2020_pad_mdbas.csv  2021_pad_mdbas.csv  2022_pad_mdbas.csv  2023_pad_mdbas.csv
auq_data_engine/data/raw_sample/barcelona_sample/indicators/surface/: 2019_superficie.csv  2020_superficie.csv  2021_superficie.csv
auq_data_engine/data/raw_sample/barcelona_sample/point-features/: Equipaments_del_mapa.csv  cultura_parcs-i-jardins.csv  mercats-centrescomercials_mercats-municipals.csv
auq_data_engine/data/raw_sample/madrid_sample/point_features/: 201132-0-museos.csv  201747-0-bibliobuses-bibliotecas.csv  300614-0-centros-educativos.csv  bibliotecas.json  centros-educativos.json  centros-salud.json  mercados-madrid.csv  museos.json  parques-jardines.json
auq_data_engine/madrid/: api_client.py  load_districts.py  load_indicators.py  load_neighbourhoods.py  load_point_features.py
auq_data_engine/tests/: test_base_data_upload.py  test_indicators_upload.py  test_point_features_upload.py
auq_data_engine/upload/: upload_to_supabase.py
shared/common_lib/: README.md  emoji_logger.py  pyproject.toml  setup.py
(+175 files in other folders)
